==> SilenceLY05/STM32F103HAL/43-OV7725/1.液晶实时显示/User/OV7725/bsp_ov7725.c <==
#include "bsp_ov7725.h"
#include "bsp_sccb.h"
#include "bsp_ili9341_lcd.h"
#include "bsp_usart.h"

static void FIFO_GPIO_Config(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	
	__HAL_RCC_GPIOA_CLK_ENABLE();
	__HAL_RCC_GPIOB_CLK_ENABLE();
	__HAL_RCC_GPIOC_CLK_ENABLE();
	__HAL_RCC_GPIOD_CLK_ENABLE();
	
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Pin = OV7725_OE_GPIO_PIN;
	HAL_GPIO_Init(OV7725_OE_GPIO_PORT,&GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = OV7725_WRST_GPIO_PIN;
	HAL_GPIO_Init(OV7725_WRST_GPIO_PORT,&GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = OV7725_RRST_GPIO_PIN;
	HAL_GPIO_Init(OV7725_RRST_GPIO_PORT,&GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = OV7725_RCLK_GPIO_PIN;
	HAL_GPIO_Init(OV7725_RCLK_GPIO_PORT,&GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = OV7725_WE_GPIO_PIN;
	HAL_GPIO_Init(OV7725_WE_GPIO_PORT,&GPIO_InitStructure);
	
	
	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Pin = OV7725_DATA_0_GPIO_PIN | OV7725_DATA_1_GPIO_PIN | OV7725_DATA_2_GPIO_PIN | 
													 OV7725_DATA_3_GPIO_PIN | OV7725_DATA_4_GPIO_PIN | OV7725_DATA_5_GPIO_PIN | 
													 OV7725_DATA_6_GPIO_PIN | OV7725_DATA_7_GPIO_PIN;
	HAL_GPIO_Init(OV7725_DATA_GPIO_PORT,&GPIO_InitStructure);
	
	
	FIFO_OE_L();                  //拉低使FIFO输出使能
	FIFO_WE_H();                  //拉高使FIFO写允许
	
	
}

static void VSYNC_GPIO_Config(void)
{
	GPIO_InitTypeDef         GPIO_InitStructure;
	__HAL_RCC_AFIO_CLK_ENABLE();
	__HAL_RCC_GPIOC_CLK_ENABLE();
	
	GPIO_InitStructure.Pin = OV7725_VSYNC_GPIO_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_IT_RISING;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(OV7725_VSYNC_GPIO_PORT,&GPIO_InitStructure);
	
	HAL_NVIC_SetPriority(OV7725_VSYNC_EXTI_IRQ,0,3);
	HAL_NVIC_EnableIRQ(OV7725_VSYNC_EXTI_IRQ);
}
